⚙️ chore(docker): update docker-compose.yml to remove cron services and files

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,13 +1,13 @@
-version: '3.8'
+version: "3.8"
 services:
   app:
     build:
       context: ""
       dockerfile: Dockerfile
       args:
-        USER_ID: '${WWWUSER:-1000}'
-        GROUP_ID: '${WWWGROUP:-1000}'
-        USER: '${USER:-whoami}'
+        USER_ID: "${WWWUSER:-1000}"
+        GROUP_ID: "${WWWGROUP:-1000}"
+        USER: "${USER:-whoami}"
     container_name: php-framework-pro-app
     restart: always
     working_dir: /var/www/
@@ -43,18 +43,3 @@ services:
       PMA_PASSWORD: root
     ports:
       - 8080:80
-  mailhog:
-    image: mailhog/mailhog
-    container_name: php-framework-pro-mailhog
-    restart: always
-    logging:
-      driver: none
-    ports:
-      - 8025:8025
-      - 1025:1025
-  cron:
-    container_name: php-framework-pro-cron
-    build: ./cron
-    volumes:
-      - ../:/var/www
-      - ./log/cron:/var/log/cron
