🚀feat(app) add Application class and run method 🚀feat(router) add Router class, get method and resolve method 🚀feat(request) add Request class and getPath method

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,15 @@
 {
+    "name": "karimalihussein/php-mvc-framework",
+    "description": "A simple PHP MVC framework for building web applications, with clean documentation and a friendly community.",
+    "type": "project",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Karim Ali Hussein",
+            "email": "karimalihussein99@gmail.com",
+            "role": "Developer"
+        }
+    ],
     "require": {},
     "autoload": {
         "psr-4": {
